# VDDB

./: Cargo.toml  README.md
src/: lib.rs  logging.rs  main.rs  metrics.rs  types.rs
src/plugin/: mod.rs
src/plugins/: mod.rs
src/query/: planner.rs
src/repl/: mod.rs
src/storage/: block.rs  buffer.rs  column.rs  index.rs  mod.rs  table.rs
src/transaction/: mod.rs
