[package]
name = "vddb"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ordered-float = { version = "3.0", features = ["serde"] }
fs2 = "0.4"
log = "0.4"
rayon = "1.8"
rand = "0.8"
rustyline = "12.0"
env_logger = "0.10"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
parking_lot = "0.12"
crossbeam = "0.8"
chrono = "0.4"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"
flamegraph = "0.2"